--- a/src/app/foda/foda/foda.component.html
+++ b/src/app/foda/foda/foda.component.html
@@ -127,7 +127,7 @@
       </div>
       <div class="modal-body bg-success">
         <p><strong>Alta competencia</strong></p>
-        <p></p>
+        <p><strong>Poca experiencia</strong></p>
         <p><strong></strong></p>
         <p></p>
       </div>
