--- a/src/app/metas/metas.component.html
+++ b/src/app/metas/metas.component.html
@@ -4,8 +4,9 @@
       <div class="col col-12">
         <p class="bg-info">Obtener el certificado del curso (Código) con la más alta calificación.</p>
         <p class="bg-info">Comenzar mi marca personal (itrebolsoft) antes de abril.</p>
+        <p class="bg-info">Emprender en un negocio conjunto con mi novia. Considero inteligente a un hombre que sabe como escoger a su pareja. Yo soy inteligente.</p>
         <p class="bg-info">Pedida de mano y matrimonio antes de fin de año.</p>
-        <p class="bg-info">Bailar la 'pandilla puneña' en este año y participar de la festividad de la 'Virgen de la Candelaria'.</p>
+        <!-- <p class="bg-info">Bailar la 'pandilla puneña' en este año y participar de la festividad de la 'Virgen de la Candelaria'.</p> -->
         <p class="bg-info">Terminar mi carrera universitaria y sacar el título profesional de Ing. Electrónico en la UNSA el próximo año.</p>
       </div>
     </div>
