--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,11 @@ h1{
     font-weight: bold;
     color: #FEFAF1;
 }
+h3{
+    font-size: 25px;
+    font-weight: lighter;
+    color: #FEFAF1;
+}
 p{
     font-size: 20px;
     font-weight: lighter;
