--- a/src/app/preguntas/preguntas.component.html
+++ b/src/app/preguntas/preguntas.component.html
@@ -2,11 +2,11 @@
     <h1>Conclusiones</h1>
     <div class="row ">
       <div class="col col-12">
-        <p class="bg-dark">No soy perfecto, pero puedo aparentarlo.</p>
+        <p class="bg-dark">No lo sé todo, pero aprendo rápido.</p>
         <p class="bg-dark">No soy el mejor en mi rubro -todavía-, una hormiga puede compensar eso.</p>
         <p class="bg-dark">La buena ortografía conmigo esta asegurada.</p>
-        <p class="bg-dark">Dime algún tema de conversación, siempre sabré que responder porque tengo una alta cultura general.</p>
         <p class="bg-dark">La proactividad no es una virtud de nacimiento, lo entiendo y por eso aprendo.</p>
+        <p class="bg-dark">Dime algún tema de conversación, siempre sabré que responder porque tengo una alta cultura general.</p>
       </div>
     </div>
   </div>
